# rust-ffi-examples

./: Cargo.toml
bar/: Cargo.toml
bar/bar-sys/: Cargo.toml  build.rs
bar/bar-sys/include/bar/: bar.h
bar/bar-sys/src/: bar.c
bar/src/: lib.rs
baz/: Cargo.toml
baz/baz-sys/: Cargo.toml  build.rs
baz/baz-sys/include/baz/: baz.h
baz/baz-sys/src/: baz.c
baz/src/: lib.rs
foo/: Cargo.toml
foo/foo-sys/: Cargo.toml  build.rs
foo/foo-sys/include/foo/: foo.h
foo/foo-sys/src/: foo.c
foo/src/: lib.rs
